--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 <title>BONGKARJP : Menyediakan RTP Slot Secara Akurat & Terupdate | 💯💢</title>
 <meta name="description" content="BONGKARJP : Menyediakan RTP Slot Secara Akurat & Terupdate | 💯💢, BONGKARJP merupakansalah satu situs online terbaik se indonesia yang digemari oleh banyak pemain game onine karena mempunyai berbagai fitur yang berkualitas serta jackpot.">
 <meta name="Keywords" content="bongkarjp, bongkarjp slot"/>
-<meta name="google-site-verification" content="n-HQqM6QjTrBL_MbNnJ8tXoc3Mm6qjFNz5TA--fsdro" />
 <link rel="shortcut icon" href="images/favicon.ico">
-<link rel="canonical" href="https://bongkarjp.rootkit.finance/"/>
+<link rel="canonical" href="https://bongkarjp.dbtong.cn/"/>
 <meta name="robots" content="index, follow" />
 <meta name="copyright" content="BONGKARJP">
 <meta name="rating" content="general"/>
@@ -24,7 +23,7 @@
 <meta name="copyright" content="copyright@ 2023 BONGKARJP"/>
 <meta name="theme-color" content="#140235">
 <meta property="og:locale" content="id_ID"/>
-<meta property="og:url" content="https://bongkarjp.rootkit.finance/"/>
+<meta property="og:url" content="https://bongkarjp.dbtong.cn/"/>
 <meta property="og:type" content="website"/>
 <meta property="og:image" content="https://i.ibb.co/L9PnBw4/ke-slot-gacor-aja-bos.jpg"/>
 <meta property="og:title" content="BONGKARJP : Menyediakan RTP Slot Secara Akurat & Terupdate | 💯💢 "/>
@@ -68,8 +67,8 @@
 		
 	</div>
 	<div class="col-lg-12" align ="center" style="width:100%;padding:28px;margin:auto">
-        <span style="padding:10px;color:white;">Copyright &copy; 2023 <a href="https://bongkarjp.rootkit.finance/" class="keyword" style="text-decoration:none;">BONGKARJP</a></span>
+        <span style="padding:10px;color:white;">Copyright &copy; 2023 <a href="https://bongkarjp.dbtong.cn/" class="keyword" style="text-decoration:none;">BONGKARJP</a></span>
     </div>
-<script type="application/ld+json">{"@context" : "http://schema.org","@type":"Game","name" : "BONGKARJP","author" : {"@type" : "Person","name" : "BONGKARJP"},"headline":"BONGKARJP: Situs Judi Slot Online Terkemuka di Indonesia","description": "BONGKARJP ialah salat satu situs judi slot online terkemuka di Indonesia. Dengan lisensi resmi dari PAGCOR membuat situs ini aman dan terpercaya.","keywords":["BONGKARJP"],"image" : "https://i.ibb.co/L9PnBw4/ke-slot-gacor-aja-bos.jpg","url" : "https://bongkarjp.rootkit.finance/","publisher" : {"@type" : "Organization","name" : "BONGKARJP"},"aggregateRating" : {"@type" : "AggregateRating","ratingValue" : "95","bestRating" : "99","worstRating" : "35","ratingCount" : "193769"},"inLanguage": "id-ID"}</script>
+<script type="application/ld+json">{"@context" : "http://schema.org","@type":"Game","name" : "BONGKARJP","author" : {"@type" : "Person","name" : "BONGKARJP"},"headline":"BONGKARJP: Situs Judi Slot Online Terkemuka di Indonesia","description": "BONGKARJP ialah salat satu situs judi slot online terkemuka di Indonesia. Dengan lisensi resmi dari PAGCOR membuat situs ini aman dan terpercaya.","keywords":["BONGKARJP"],"image" : "https://i.ibb.co/L9PnBw4/ke-slot-gacor-aja-bos.jpg","url" : "https://bongkarjp.dbtong.cn/","publisher" : {"@type" : "Organization","name" : "BONGKARJP"},"aggregateRating" : {"@type" : "AggregateRating","ratingValue" : "95","bestRating" : "99","worstRating" : "35","ratingCount" : "193769"},"inLanguage": "id-ID"}</script>
 </body>
 </html>
